--- a/Project2024.html
+++ b/Project2024.html
@@ -9,5 +9,7 @@
     <h1> Programming Project Demo</h1>
     My name is ALdin
     My name is Wesley Tan
+    My name is Lucas
+    My name is Sussie
 </body>
 </html>
