--- a/Project2024.html
+++ b/Project2024.html
@@ -11,5 +11,7 @@
     My name is Wesley Tan
     My name is Lucas
     My name is Sussie
+    My name is Dyan
+    My name is Zara
 </body>
 </html>
