--- a/Project2024.html
+++ b/Project2024.html
@@ -7,8 +7,8 @@
 </head>
 <body>
     <h1> Programming Project Demo</h1>
-    My name is ALdin
-    My name is Wesley Tan
+    "My name is ALdin"
+    "My name is Wesley Tan"
     My name is Lucas
     My name is Sussie
     My name is Dyan
