--- a/Project2024.html
+++ b/Project2024.html
@@ -7,11 +7,12 @@
 </head>
 <body>
     <h1> Programming Project Demo</h1>
-    "My name is ALdin"
-    "My name is Wesley Tan"
-    My name is Lucas
-    My name is Sussie
-    My name is Dyan
-    My name is Zara
+    <p>My name is ALdin</p>
+    <p>My name is Wesley Tan</p>
+    <p>My name is Lucas</p>
+    <p>My name is Sussie</p>
+    <p>My name is Dyan</p>
+    <p>My name is Zara</p>
+    <p>My name is Lin Khant.</p>
 </body>
 </html>
