--- a/Project2024.html
+++ b/Project2024.html
@@ -14,5 +14,6 @@
     <p>My name is Dyan</p>
     <p>My name is Zara</p>
     <p>My name is Lin Khant.</p>
+    <p>My name is Phu Myat Min Zaw</p>
 </body>
 </html>
