--- a/Project2024.html
+++ b/Project2024.html
@@ -15,5 +15,6 @@
     <p>My name is Zara</p>
     <p>My name is Lin Khant.</p>
     <p>My name is Phu Myat Min Zaw</p>
+    <p>My Name is Aldrich Lim</p>
 </body>
 </html>
